<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_4sdp"
    app:cardElevation="@dimen/_8sdp"
    android:background="@color/colorPrimaryDark"
    app:contentPadding="@dimen/_24sdp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/enter_name"
            android:text="@string/enter_name"
            android:fontFamily="serif-monospace"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="sans-serif-black"
            android:id="@+id/player1"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_name"
            android:text="@string/player_1"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:fontFamily="casual"
            android:inputType="text"
            android:layout_marginStart="@dimen/_4sdp"
            app:layout_constraintStart_toEndOf="@+id/player1"
            app:layout_constraintTop_toTopOf="@id/player1"
            app:layout_constraintBottom_toBottomOf="@id/player1"
            android:layout_marginLeft="@dimen/_4sdp"
            android:textSize="@dimen/_14sdp"
            android:id="@+id/player1_et"
            android:hint="Player 1"
            android:maxLength="15"
            android:ems="13"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="sans-serif-black"
            android:id="@+id/player2"
            android:text="Player 2"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="@id/player1"
            app:layout_constraintTop_toBottomOf="@id/player1"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:fontFamily="casual"
            android:inputType="text"
            android:layout_marginStart="@dimen/_4sdp"
            app:layout_constraintStart_toEndOf="@id/player2"
            app:layout_constraintTop_toTopOf="@id/player2"
            app:layout_constraintBottom_toBottomOf="@id/player2"
            android:layout_marginLeft="@dimen/_4sdp"
            android:textSize="@dimen/_14sdp"
            android:id="@+id/player2_et"
            android:hint="Player 2"
            android:maxLength="15"
            android:ems="13"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/player2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/level_txt"
            android:text="@string/choose_bot_level"
            android:fontFamily="serif-monospace"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintTop_toBottomOf="@id/player2"
            app:layout_constraintStart_toStartOf="@id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@id/player1"
            app:layout_constraintTop_toBottomOf="@id/level_txt"
            app:layout_constraintBottom_toTopOf="@id/continue_tv"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:fontFamily="casual"
                android:id="@+id/easy"
                android:text="@string/easy"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:fontFamily="casual"
                android:id="@+id/medium"
                android:text="@string/medium"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:fontFamily="casual"
                android:id="@+id/hard"
                android:text="@string/hard"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:fontFamily="serif-monospace"
            android:id="@+id/continue_tv"
            android:text="@string/continue_txt"
            android:textSize="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_bright"/>

        <TextView
            android:fontFamily="serif-monospace"
            android:id="@+id/no"
            android:text="@string/no"
            android:textSize="@dimen/_16sdp"
            android:textColor="@android:color/holo_blue_bright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/continue_tv"
            android:layout_marginRight="@dimen/_26sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>