<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:background="@color/colorPrimaryDark"
    android:animateLayoutChanges="true">

    <TextView
        android:text="@string/tic_tac_toe"
        android:fontFamily="cursive"
        android:id="@+id/banner"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:padding="@dimen/_8sdp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/_40sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pvp"
        android:gravity="center"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_180sdp"
        android:background="@drawable/tab"
        android:padding="@dimen/_8sdp"
        android:text="@string/player_vs_player"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pvb"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/tab"
        android:padding="@dimen/_8sdp"
        android:text="@string/player_vs_bot"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@+id/pvp"
        app:layout_constraintStart_toStartOf="@+id/pvp"
        app:layout_constraintTop_toBottomOf="@+id/pvp" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/tab"
        android:padding="@dimen/_8sdp"
        android:text="@string/give_feedback"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@+id/pvp"
        app:layout_constraintStart_toStartOf="@+id/pvp"
        app:layout_constraintTop_toBottomOf="@+id/pvb" />

</android.support.constraint.ConstraintLayout>