<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.GamePlay"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/parentLayout">

    <TextView
        android:id="@+id/home"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_view_name"
        app:layout_constraintBottom_toBottomOf="@id/image_view_name"
        app:layout_constraintEnd_toStartOf="@id/image_view_name"
        android:background="@drawable/home_icon"
        app:layout_constraintHorizontal_bias="0.3"/>

    <TextView
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/image_view_name"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/tic_tac_toe"
        android:textSize="@dimen/_20sdp"
        android:fontFamily="serif-monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_above="@id/layout_board_cardView"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimaryText"
        tools:text="@string/computer_won"
        android:id="@+id/tv_game_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fontFamily="casual"
        android:textStyle="bold"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintVertical_bias="0.3"/>

    <android.support.v7.widget.CardView
        android:id="@+id/layout_board_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="@dimen/_1sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintVertical_bias="0.25">

        <GridLayout
            android:padding="@dimen/_1sdp"
            android:rowCount="3"
            android:columnCount="3"
            android:id="@+id/layout_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </android.support.v7.widget.CardView>

    <TextView
        app:layout_constraintTop_toTopOf="@id/home"
        app:layout_constraintStart_toEndOf="@id/image_view_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/home"
        android:id="@+id/game_restart"
        android:background="@drawable/refresh_button"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        app:layout_constraintHorizontal_bias="0.7"/>

    <TextView
        android:id="@+id/player1"
        android:text="@string/you"
        android:textColor="@color/blue"
        style="@style/pvb_scoreBoardHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@id/divider"/>

    <TextView
        android:id="@+id/player1_win_count"
        android:text="2"
        android:textColor="@color/blue"
        style="@style/pvb_scoreBoardScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="@id/divider"/>

    <View
        android:id="@+id/divider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/_4sdp"
        android:layout_height="@dimen/_120sdp"
        app:layout_constraintVertical_bias="0.85"
        android:background="#FFFFFF"
        android:layout_marginBottom="@dimen/_8sdp"/>

    <TextView
        android:id="@+id/player2"
        android:text="@string/computer"
        android:textColor="@android:color/holo_red_dark"
        style="@style/pvb_scoreBoardHeadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@id/divider"/>

    <TextView
        android:id="@+id/player2_win_count"
        android:text="2"
        android:textColor="@android:color/holo_red_dark"
        style="@style/pvb_scoreBoardScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="@id/divider"/>

    <Button
        android:id="@+id/reset"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/reset"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="casual"
        android:background="@drawable/tab"
        app:layout_constraintTop_toBottomOf="@id/divider"/>

</android.support.constraint.ConstraintLayout>